# multigrad

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  reference.rst
docs/source/notebooks/: intro.ipynb  smf_gradient_descent.py
multidiff/: __init__.py  adam.py  multidiff.py  util.py
multidiff/diffdesi_experimental/: util.py
multidiff/mpi4jax/: multidiff.py
multigrad/: __init__.py  bfgs.py  multigrad.py
multigrad/mpi4jax/: __init__.py  multigrad.py
paper/: paper.bib  paper.md
tests/: test_mpi.py
tests/smf_example/: __init__.py  benchmark.py  parallel_sum_mpi4py_demo.py  smf_grad_descent.py  submit_benchmark_jobs.py
