[project]
name = "multidiff"
authors = [
    {name = "Alan Pearl", email = "alanpearl13@gmail.com"}
]
description = "Differentiable Multiprocessing for Gradient Descent with JAX"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

# [project.urls]
# home = "https://github.com/AlanPearl/multidiff"

[tool.setuptools_scm]
write_to = "multidiff/_version.py"
write_to_template = "__version__ = '{version}'"

[tool.setuptools]
include-package-data = true
packages = {find = {exclude=["tests*", "scripts*", "docs*", "notebooks*"]}}
package-dir = {multidiff = "multidiff"}

[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm>=7"
]
build-backend = "setuptools.build_meta"
